# demo-py3-fastapi

./: .env.dev  .env.development  .env.example  .env.production  .gitignore  Dockerfile  README.md  alembic.ini  main.py  optLog.md  opt_log.md  pyproject.toml  requirements.txt  ruff.toml  setup.py
.idx/: dev.nix
.kiro/settings/: config.json
.kiro/specs/config-management/: design.md  requirements.md
alembic/: env.py
app/: __init__.py  boot.py  config.py  database.py  logger.py
app/models/: ollama.py
app/routes/: auth.py  ollama.py
app/services/: ollama_service.py
requirements/: base.txt
scripts/: devserver.sh
src/demo_py3_fastapi/: main.py
src/demo_py3_fastapi/api/: __init__.py
src/demo_py3_fastapi/config/: app_config.py  database.py  env.py  my_config.py
src/demo_py3_fastapi/core/: __init__.py
src/demo_py3_fastapi/domains/: __init__.py
src/demo_py3_fastapi/feature/: __init__.py
src/demo_py3_fastapi/middleware/: __init__.py
src/demo_py3_fastapi/model/: __init__.py
src/demo_py3_fastapi/schema/: __init__.py
src/demo_qt/: demo1.py  demo2.py
src/my_config/: global_config.py
src/my_log/: app_log.py
src/my_utils/: path_util.py  string_util.py
src/temp/: demo_docext.py  demo_exchange_rate.py
tests/: test_main.py
tests/unit/config/: test_my_config.py
tests/unit/my_utils/: test_path_util.py
